--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul>
-							<li><a href="#intro">WELCOME</a></li>
-							<li><a href="#work">MEET THE ARTIST</a></li>
+							<li><a href="#intro"><b>WELCOME</b></a></li>
+							<li><a href="#work"><b>MEET THE ARTIST</b></a></li>
 							<li><a href="#one">MY WORK</a></li>
 							<li><a href="#two">VISIT ME</a></li>
 							<li><a href="#contact">KEEP IN TOUCH</a></li>
