Change to bold-faced

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Angela Stelin</title>
+		<title>ANGELA STELIN</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -20,16 +20,16 @@
 			<header id="header">
 
 				<!-- Logo -->
-					<h1 id="logo">Angela Stelin</h1>
+					<h1 id="logo">ANGELA STELIN</h1>
 
 				<!-- Nav -->
 					<nav id="nav">
 						<ul>
 							<li><a href="#intro"><b>WELCOME</b></a></li>
 							<li><a href="#work"><b>MEET THE ARTIST</b></a></li>
-							<li><a href="#one">MY WORK</a></li>
-							<li><a href="#two">VISIT ME</a></li>
-							<li><a href="#contact">KEEP IN TOUCH</a></li>
+							<li><a href="#one"><b>MY WORK</b></a></li>
+							<li><a href="#two"><b>VISIT ME</b></a></li>
+							<li><a href="#contact"><b>KEEP IN TOUCH</b></a></li>
 						</ul>
 					</nav>
 
