--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 					by <a href="http://html5up.net">HTML5 UP</a>, built on <strong><a href="http://getskel.com">Skel</a></strong>,
 					and released for free under the <a href="http://html5up.net/license">Creative Commons Attribution 3.0 license</a>.</p>
 					<footer>
-						<a href="#one" class="button style2 down">More</a>
+						<a href="#work" class="button style2 down">More</a>
 					</footer>
 				</div>
 			</section>
@@ -54,7 +54,7 @@
 	<section id="work" class="main style3 primary">
 				<div class="content container">
 					<header>
-						<h2>My Work</h2>
+						<h2>Meet the Artist</h2>
 						<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.
 						Fusce blandit ultrices sapien, in accumsan orci rhoncus eu. Sed sodales venenatis
 						arcu, id varius justo euismod in. Curabitur egestas consectetur magna vitae.</p>
@@ -102,7 +102,7 @@
 					Fusce blandit ultrices sapien, in accumsan orci rhoncus eu. Sed sodales venenatis arcu,
 					id varius justo euismod in. Curabitur egestas consectetur magna.</p>
 				</div>
-				<a href="#work" class="button style2 down anchored">Next</a>
+				<a href="#contact" class="button style2 down anchored">Next</a>
 			</section>
 
 		<!-- Contact -->
