Boldfacing words on painting

--- a/index.html
+++ b/index.html
@@ -41,7 +41,10 @@
 					<header>
 						<h2></h2>
 					</header>
-					<p>A simple glance at a serense sunrise awoke me to the calling of my art</p>
+					<p>
+						<br>
+						<b>A simple glance at a serense sunrise awoke me to the calling of my art - Angela Stelin</b>
+						</p>
 					<footer>
 						<a href="#work" class="button style2 down">More</a>
 					</footer>
