--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
 			<section id="intro" class="main style1 dark fullscreen">
 				<div class="content container 75%">
 					<header>
-						<h2></h2>
+						<br>
+						<h2>A simple glance at a serense sunrise awoke me to the calling of my art</h2>
 					</header>
 					<p>
-						<br>
-						<b>A simple glance at a serense sunrise awoke me to the calling of my art - Angela Stelin</b>
+						<b>- Angela Stelin</b>
 						</p>
 					<footer>
 						<a href="#work" class="button style2 down">More</a>
