--- a/index.html
+++ b/index.html
@@ -112,6 +112,9 @@
 				<div class="content container">
 					<header>
 						<h2>Say Hello.</h2>
+						<br>
+						<centre><img src="images/facebook.png"><img src="images/instagram.png"></centre>
+						<br>
 						<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.</p>
 					</header>
 					<div class="box container 75%">
@@ -140,7 +143,7 @@
 
 		<!-- Footer -->
 			<footer id="footer">
-				
+
 				<!-- Menu -->
 					<ul class="menu">
 						<li>&copy; Angela Stelin</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
