Updating the social media buttons

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 					<header>
 						<h2>Say Hello.</h2>
 						<br>
-						<centre><img src="images/facebook.png"><img src="images/instagram.png"></centre>
+						<centre><a href=""><img src="images/facebook.png"></a> <a href="><img src="images/instagram.png"></a></centre>
 						<br>
 						<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.</p>
 					</header>
