Edited headings and main painting

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 							<li><a href="#intro"><b>WELCOME</b></a></li>
 							<li><a href="#work"><b>MEET THE ARTIST</b></a></li>
 							<li><a href="#one"><b>MY WORK</b></a></li>
-							<li><a href="#two"><b>VISIT ME</b></a></li>
-							<li><a href="#contact"><b>KEEP IN TOUCH</b></a></li>
+							<li><a href="#two"><b>GALLERY</b></a></li>
+							<li><a href="#contact"><b>CONTACT</b></a></li>
 						</ul>
 					</nav>
 
@@ -85,7 +85,7 @@
 			<section id="one" class="main style2 right dark fullscreen">
 				<div class="content box style2">
 					<header>
-						<h2>What I Do</h2>
+						<h2>MY WORK</h2>
 					</header>
 					<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.
 					Fusce blandit ultrices sapien, in accumsan orci rhoncus eu. Sed sodales venenatis arcu,
@@ -98,7 +98,7 @@
 			<section id="two" class="main style2 left dark fullscreen">
 				<div class="content box style2">
 					<header>
-						<h2>Who I Am</h2>
+						<h2>GALLERY</h2>
 					</header>
 					<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.
 					Fusce blandit ultrices sapien, in accumsan orci rhoncus eu. Sed sodales venenatis arcu,
@@ -111,7 +111,7 @@
 			<section id="contact" class="main style3 secondary">
 				<div class="content container">
 					<header>
-						<h2>Say Hello.</h2>
+						<h2>KEEP IN TOUCH</h2>
 						<br>
 						<centre><a href="" target="_blank"><img src="images/facebook.png"></a><a href="" target="_blank"><img src="images/instagram.png"></a></centre>
 						<br>
