--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 					<nav id="nav">
 						<ul>
 							<li><a href="#intro"><b>WELCOME</b></a></li>
-							<li><a href="#work"><b>MEET THE ARTIST</b></a></li>
+							<li><a href="#two"><b>MEET THE ARTIST</b></a></li>
 							<li><a href="#one"><b>MY WORK</b></a></li>
-							<li><a href="#two"><b>GALLERY</b></a></li>
+							<li><a href="#work"><b>GALLERY</b></a></li>
 							<li><a href="#contact"><b>CONTACT</b></a></li>
 						</ul>
 					</nav>
@@ -52,14 +52,59 @@
 				</div>
 			</section>
 
+
 <!-- Meet the artist -->
-	<section id="work" class="main style3 primary">
+<section id="two" class="main style2 left dark fullscreen">
+				<div class="content box style2">
+					<header>
+						<h2>MEET THE ARTIST</h2>
+					</header>
+					<p>I am Brazilian, born in Bauru in the state of São Paulo. I spent all
+							of my childhood and youth in the alpha global city of São Paulo and
+							holidaying in Mato Grosso do Sul.<br>
+
+							I grew up in a family linked to music, literature and visual arts, and
+							soon I started drawing. When the moment came to decide on my career,
+							considering I enjoyed mathematics and geometric drawings, I opted to
+							study Industrial Design at Fundação Armando Álvares Penteado.<br>
+
+							Came marriage and the children, I put my career on the side but I was
+							never pulled away from my passion for the Arts; fulfilling myself
+							appreciating artwork and artistic manifestations.<br>
+
+							I left Brazil in 1994, following my husband to live in Morocco, Turkey
+							and then Sweden. It was in Istanbul that I had the chance to learn to
+							do turkish miniatures, marbling, painting in gouache and watercolour.<br>
+
+							Today, I spend my time between the tranquil life in Åmål, Sweden and
+							the buzz of London, England.<br>
+
+							It was with the births of my grandchildren that the desire to dedicate
+							myself to the Arts returned with a tremendous strength, with an
+							immense desire to express life, creativity, colours and nature!</p>
+				</div>
+				<a href="#contact" class="button style2 down anchored">Next</a>
+			</section>
+
+		<!-- One -->
+			<section id="one" class="main style2 right dark fullscreen">
+				<div class="content box style2">
+					<header>
+						<h2>MY WORK</h2>
+					</header>
+					<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.
+					Fusce blandit ultrices sapien, in accumsan orci rhoncus eu. Sed sodales venenatis arcu,
+					id varius justo euismod in. Curabitur egestas consectetur magna.</p>
+				</div>
+				<a href="#two" class="button style2 down anchored">Next</a>
+			</section>
+
+		<!-- Two -->
+			<section id="work" class="main style3 primary">
 				<div class="content container">
 					<header>
-						<h2>Meet the Artist</h2>
-						<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.
-						Fusce blandit ultrices sapien, in accumsan orci rhoncus eu. Sed sodales venenatis
-						arcu, id varius justo euismod in. Curabitur egestas consectetur magna vitae.</p>
+						<h2>GALLERY</h2>
+						<p></p>
 					</header>
 
 					<!-- Lightbox Gallery  -->
@@ -81,31 +126,6 @@
 				</div>
 			</section>
 
-		<!-- One -->
-			<section id="one" class="main style2 right dark fullscreen">
-				<div class="content box style2">
-					<header>
-						<h2>MY WORK</h2>
-					</header>
-					<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.
-					Fusce blandit ultrices sapien, in accumsan orci rhoncus eu. Sed sodales venenatis arcu,
-					id varius justo euismod in. Curabitur egestas consectetur magna.</p>
-				</div>
-				<a href="#two" class="button style2 down anchored">Next</a>
-			</section>
-
-		<!-- Two -->
-			<section id="two" class="main style2 left dark fullscreen">
-				<div class="content box style2">
-					<header>
-						<h2>GALLERY</h2>
-					</header>
-					<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.
-					Fusce blandit ultrices sapien, in accumsan orci rhoncus eu. Sed sodales venenatis arcu,
-					id varius justo euismod in. Curabitur egestas consectetur magna.</p>
-				</div>
-				<a href="#contact" class="button style2 down anchored">Next</a>
-			</section>
 
 		<!-- Contact -->
 			<section id="contact" class="main style3 secondary">
