fixing layout and hyperlinks

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 					<footer>
 						<br>
 						<br>
-						<a href="#work" class="button style2 down">More</a>
+						<a href="#two" class="button style2 down">More</a>
 					</footer>
 				</div>
 			</section>
@@ -83,7 +83,7 @@
 							myself to the Arts returned with a tremendous strength, with an
 							immense desire to express life, creativity, colours and nature!</p>
 				</div>
-				<a href="#contact" class="button style2 down anchored">Next</a>
+				<a href="#one" class="button style2 down anchored">Next</a>
 			</section>
 
 		<!-- One -->
@@ -96,7 +96,7 @@
 					Fusce blandit ultrices sapien, in accumsan orci rhoncus eu. Sed sodales venenatis arcu,
 					id varius justo euismod in. Curabitur egestas consectetur magna.</p>
 				</div>
-				<a href="#two" class="button style2 down anchored">Next</a>
+				<a href="#work" class="button style2 down anchored">Next</a>
 			</section>
 
 		<!-- Two -->
@@ -124,6 +124,7 @@
 						</div>
 
 				</div>
+				<a href="#contact" class="button style2 down anchored">Next</a>
 			</section>
 
 
