Changing layout again

--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
 
 
 <!-- Meet the artist -->
-<section id="two" class="main style2 left dark fullscreen">
-				<div class="content box style2">
+<section id="two" class="main style3 primary">
+				<div class="content container">
 					<header>
 						<h2>MEET THE ARTIST</h2>
 					</header>
