--- a/index.html
+++ b/index.html
@@ -54,12 +54,13 @@
 
 
 <!-- Meet the artist -->
-<section id="two" class="main style3 primary">
-				<div class="content container">
+
+<section id="two" class="main style2 right dark fullscreen">
+				<div class="content box style3">
 					<header>
 						<h2>MEET THE ARTIST</h2>
 					</header>
-					<p>I am Brazilian, born in Bauru in the state of São Paulo. I spent all
+					<p align="justify">I am Brazilian, born in Bauru in the state of São Paulo. I spent all
 							of my childhood and youth in the alpha global city of São Paulo and
 							holidaying in Mato Grosso do Sul.<br>
 
