--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 					<nav id="nav">
 						<ul>
 							<li><a href="#intro"><b>WELCOME</b></a></li>
-							<li><a href="#two"><b>MEET THE ARTIST</b></a></li>
+							<li><a href="#work"><b>MEET THE ARTIST</b></a></li>
 							<li><a href="#one"><b>MY WORK</b></a></li>
-							<li><a href="#work"><b>GALLERY</b></a></li>
+							<li><a href="#two"><b>GALLERY</b></a></li>
 							<li><a href="#contact"><b>CONTACT</b></a></li>
 						</ul>
 					</nav>
@@ -47,20 +47,19 @@
 					<footer>
 						<br>
 						<br>
-						<a href="#two" class="button style2 down">More</a>
+						<a href="#work" class="button style2 down">More</a>
 					</footer>
 				</div>
 			</section>
 
 
 <!-- Meet the artist -->
-
-<section id="two" class="main style3 right dark fullscreen">
-				<div class="content box style3">
+				<section id="work" class="main style2 primary">
+				<div class="content container">
 					<header>
 						<h2>MEET THE ARTIST</h2>
 					</header>
-					<p align="justify">I am Brazilian, born in Bauru in the state of São Paulo. I spent all
+						<p align="justify">I am Brazilian, born in Bauru in the state of São Paulo. I spent all
 							of my childhood and youth in the alpha global city of São Paulo and
 							holidaying in Mato Grosso do Sul.<br>
 
@@ -97,11 +96,11 @@
 					Fusce blandit ultrices sapien, in accumsan orci rhoncus eu. Sed sodales venenatis arcu,
 					id varius justo euismod in. Curabitur egestas consectetur magna.</p>
 				</div>
-				<a href="#work" class="button style2 down anchored">Next</a>
+				<a href="#two" class="button style2 down anchored">Next</a>
 			</section>
 
 		<!-- Two -->
-			<section id="work" class="main style3 primary">
+			<section id="two" class="main style3 primary">
 				<div class="content container">
 					<header>
 						<h2>GALLERY</h2>
