--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 			</section>
 
 		<!-- Two -->
-			<section id="two" class="main style2 primary">
+			<section id="work" class="main style2 primary">
 				<div class="content container">
 					<header>
 						<h2>GALLERY</h2>
