--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 					<nav id="nav">
 						<ul>
 							<li><a href="#intro"><b>WELCOME</b></a></li>
-							<li><a href="#work"><b>MEET THE ARTIST</b></a></li>
+							<li><a href="#artist"><b>MEET THE ARTIST</b></a></li>
 							<li><a href="#one"><b>MY WORK</b></a></li>
-							<li><a href="#two"><b>GALLERY</b></a></li>
+							<li><a href="#work"><b>GALLERY</b></a></li>
 							<li><a href="#contact"><b>CONTACT</b></a></li>
 						</ul>
 					</nav>
@@ -47,14 +47,14 @@
 					<footer>
 						<br>
 						<br>
-						<a href="#work" class="button style2 down">More</a>
+						<a href="#artist" class="button style2 down">More</a>
 					</footer>
 				</div>
 			</section>
 
 
 <!-- Meet the artist -->
-				<section id="work" class="main style2 primary">
+				<section id="artist" class="main style3 primary">
 				<div class="content container">
 					<header>
 						<h2>MEET THE ARTIST</h2>
@@ -96,7 +96,7 @@
 					Fusce blandit ultrices sapien, in accumsan orci rhoncus eu. Sed sodales venenatis arcu,
 					id varius justo euismod in. Curabitur egestas consectetur magna.</p>
 				</div>
-				<a href="#two" class="button style2 down anchored">Next</a>
+				<a href="#work" class="button style2 down anchored">Next</a>
 			</section>
 
 		<!-- Two -->
