Adding Angela's picture

--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@
 					<header>
 						<h2>MEET THE ARTIST</h2>
 					</header>
+					<center><img src="images/Angela.jpg"></center>
+					<br>
 						<p align="justify">I am Brazilian, born in Bauru in the state of São Paulo. I spent all
 							of my childhood and youth in the alpha global city of São Paulo and
 							holidaying in Mato Grosso do Sul.<br>
