--- a/index.html
+++ b/index.html
@@ -94,9 +94,16 @@
 					<header>
 						<h2>MY WORK</h2>
 					</header>
-					<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.
-					Fusce blandit ultrices sapien, in accumsan orci rhoncus eu. Sed sodales venenatis arcu,
-					id varius justo euismod in. Curabitur egestas consectetur magna.</p>
+					<p align="justify">Fascinated by colours and geometric figures, as well as by nature; my work mixes the abstract with the figurative.<br>
+
+					After the particular look of my everyday scenes, it is then that the
+					creativity process starts; between pencils, paints, tapes and
+					photographies.<br>
+
+					I like the surprise once I start to remove the tapes. The result
+					appears from the game of figures and empty spaces, between the opacity
+					and transparency, between the luminosity of the colours and the
+					darkness.</p>
 				</div>
 				<a href="#work" class="button style2 down anchored">Next</a>
 			</section>
