Updating contact details

--- a/index.html
+++ b/index.html
@@ -146,9 +146,9 @@
 					<header>
 						<h2>KEEP IN TOUCH</h2>
 						<br>
-						<centre><a href="" target="_blank"><img src="images/facebook.png"></a><a href="" target="_blank"><img src="images/instagram.png"></a></centre>
+						<centre><a href="https://www.facebook.com/angela.stelin.artist/?fref=ts" target="_blank"><img src="images/facebook.png"></a><a href="https://www.instagram.com/angela.stelin.artist/" target="_blank"><img src="images/instagram.png"></a></centre>
 						<br>
-						<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.</p>
+						<p align="center">Email: angelastelin@gmail.com | Phone: 07532265596</p>
 					</header>
 					<div class="box container 75%">
 
