--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 						<br>
 						<centre><a href="https://www.facebook.com/angela.stelin.artist/?fref=ts" target="_blank"><img src="images/facebook.png"></a><a href="https://www.instagram.com/angela.stelin.artist/" target="_blank"><img src="images/instagram.png"></a></centre>
 						<br>
-						<p align="center">Email: angelastelin@gmail.com | Phone: 07532265596</p>
+						<p align="center"><b>Email: angelastelin@gmail.com | Phone: 07532265596</b></p>
 					</header>
 					<div class="box container 75%">
 
