--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 					</header>
 					<center><img src="images/Angela.jpg" width="450px" height="350 px"></center>
 					<br>
-						<p align="justify">I am Brazilian, born in Bauru in the state of São Paulo. I spent all
+						<p align="justify"><b>I am Brazilian, born in Bauru in the state of São Paulo. I spent all
 							of my childhood and youth in the alpha global city of São Paulo and
 							holidaying in Mato Grosso do Sul.<br>
 
@@ -83,7 +83,7 @@
 
 							It was with the births of my grandchildren that the desire to dedicate
 							myself to the Arts returned with a tremendous strength, with an
-							immense desire to express life, creativity, colours and nature!</p>
+							immense desire to express life, creativity, colours and nature!</b></p>
 				</div>
 				<a href="#one" class="button style2 down anchored">Next</a>
 			</section>
@@ -94,7 +94,7 @@
 					<header>
 						<h2>MY WORK</h2>
 					</header>
-					<p align="justify">Fascinated by colours and geometric figures, as well as by nature; my work mixes the abstract with the figurative.<br>
+					<p align="justify"><b>Fascinated by colours and geometric figures, as well as by nature; my work mixes the abstract with the figurative.<br>
 
 					After the particular look of my everyday scenes, it is then that the
 					creativity process starts; between pencils, paints, tapes and
@@ -103,7 +103,7 @@
 					I like the surprise once I start to remove the tapes. The result
 					appears from the game of figures and empty spaces, between the opacity
 					and transparency, between the luminosity of the colours and the
-					darkness.</p>
+					darkness.</b></p>
 				</div>
 				<a href="#work" class="button style2 down anchored">Next</a>
 			</section>
@@ -113,10 +113,10 @@
 				<div class="content container">
 					<header>
 						<h2>GALLERY</h2>
-						<p align="justify">In nature I find elements so contradictory and marvellous that become paramount material for my work; such as the dispersed variety and the
+						<p align="justify"><b>In nature I find elements so contradictory and marvellous that become paramount material for my work; such as the dispersed variety and the
 						geometry, their strength and fragility, peace and violence, light and shadow.<br>
 
-						I see particles coming together and adding up, shaping scenes of a world that is ever changing.</p>
+						I see particles coming together and adding up, shaping scenes of a world that is ever changing.</b></p>
 					</header>
 
 					<!-- Lightbox Gallery  -->
