Changing welcome painting

--- a/index.html
+++ b/index.html
@@ -36,22 +36,15 @@
 			</header>
 
 		<!-- Intro -->
-			<section id="intro" class="main style1 dark fullscreen">
-				<div class="content container 75%">
+			<section id="intro" class="main style2 right dark fullscreen">
+				<div class="content box style2">
 					<header>
 						<h2></h2>
 					</header>
-					<p>
-						<b></b>
-						</p>
-					<footer>
-						<br>
-						<br>
-						<a href="#artist" class="button style2 down">More</a>
-					</footer>
+					<p align="justify">My biggest challenge is to portray in canvas my way of seeing and feeling my surroundings</p>
 				</div>
+				<a href="#artist" class="button style2 down anchored">More</a>
 			</section>
-
 
 <!-- Meet the artist -->
 				<section id="artist" class="main style3 primary">
