--- a/index.html
+++ b/index.html
@@ -47,13 +47,20 @@
 			</section>
 
 <!-- Meet the artist -->
-				<section id="artist" class="main style3 primary">
-				<div class="content container">
+			<section id="artist" class="main style2 right dark fullscreen">
+				<div class="content box style2">
 					<header>
 						<h2>MEET THE ARTIST</h2>
 					</header>
-					<center><img src="images/Angela.jpg" width="450px" height="350 px"></center>
-					<br>
+					<p><center><img src="images/Angela.jpg" width="450px" height="350 px"></center></p>
+				</div>
+			</section>
+			
+			<section id="artist2" class="main style3 primary">
+				<div class="content container">
+					<header>
+						<h2>MORE ABOUT ME</h2>
+					</header>
 						<p align="justify">I am Brazilian, born in Bauru in the state of São Paulo. I spent all
 							of my childhood and youth in the alpha global city of São Paulo and
 							holidaying in Mato Grosso do Sul.<br>
