--- a/index.html
+++ b/index.html
@@ -50,12 +50,13 @@
 			<section id="artist" class="main style2 right dark fullscreen">
 				<div class="content box style2">
 					<header>
-						<h2>MEET THE ARTIST</h2>
+						<h2><center>MEET THE ARTIST<center></h2>
 					</header>
 					<p><center><img src="images/Angela.jpg" width="450px" height="350 px"></center></p>
 				</div>
+				<a href="#artist2" class="button style2 down anchored">More about me</a>
 			</section>
-			
+
 			<section id="artist2" class="main style3 primary">
 				<div class="content container">
 					<header>
