--- a/index.html
+++ b/index.html
@@ -49,9 +49,6 @@
 <!-- Meet the artist -->
 			<section id="artist" class="main style2 right dark fullscreen">
 				<div class="content box style2">
-					<header>
-						<h2><center>MEET THE ARTIST<center></h2>
-					</header>
 					<p><center><img src="images/Angela.jpg" width="450px" height="350 px"></center></p>
 				</div>
 				<a href="#artist2" class="button style2 down anchored">More about me</a>
@@ -60,7 +57,7 @@
 			<section id="artist2" class="main style3 primary">
 				<div class="content container">
 					<header>
-						<h2>MORE ABOUT ME</h2>
+						<h2>MEET THE ARTIST</h2>
 					</header>
 						<p align="justify">I am Brazilian, born in Bauru in the state of São Paulo. I spent all
 							of my childhood and youth in the alpha global city of São Paulo and
