--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 				<div class="content box style2">
 					<p><center><img src="images/Angela.jpg" width="450px" height="350 px"></center></p>
 				</div>
-				<a href="#artist2" class="button style2 down anchored">More about me</a>
+				<a href="#artist2" class="button style2 down anchored">More</a>
 			</section>
 
 			<section id="artist2" class="main style3 primary">
