Updating more about ,e

--- a/index.html
+++ b/index.html
@@ -61,9 +61,7 @@
 					</header>
 						<p align="justify">I am Brazilian, born in Bauru in the state of São Paulo. I spent all
 							of my childhood and youth in the alpha global city of São Paulo and
-							holidaying in Mato Grosso do Sul.<br>
-							I grew up in a family linked to music, literature and visual arts, and
-							soon I started drawing. When the moment came to decide on my career,
+							holidaying in Mato Grosso do Sul.I grew up in a family linked to music, literature and visual arts, andsoon I started drawing. When the moment came to decide on my career,
 							considering I enjoyed mathematics and geometric drawings, I opted to
 							study Industrial Design at Fundação Armando Álvares Penteado.<br>
 							Came marriage and the children, I put my career on the side but I was
