--- a/index.html
+++ b/index.html
@@ -63,16 +63,14 @@
 							of my childhood and youth in the alpha global city of São Paulo and
 							holidaying in Mato Grosso do Sul.I grew up in a family linked to music, literature and visual arts, andsoon I started drawing. When the moment came to decide on my career,
 							considering I enjoyed mathematics and geometric drawings, I opted to
-							study Industrial Design at Fundação Armando Álvares Penteado.<br>
-							Came marriage and the children, I put my career on the side but I was
+							study Industrial Design at Fundação Armando Álvares Penteado.Came marriage and the children, I put my career on the side but I was
 							never pulled away from my passion for the Arts; fulfilling myself
 							appreciating artwork and artistic manifestations.<br>
 							I left Brazil in 1994, following my husband to live in Morocco, Turkey
 							and then Sweden. It was in Istanbul that I had the chance to learn to
 							do turkish miniatures, marbling, painting in gouache and watercolour.<br>
 							Today, I spend my time between the tranquil life in Åmål, Sweden and
-							the buzz of London, England.<br>
-							It was with the births of my grandchildren that the desire to dedicate
+							the buzz of London, England.It was with the births of my grandchildren that the desire to dedicate
 							myself to the Arts returned with a tremendous strength, with an
 							immense desire to express life, creativity, colours and nature!</p>
 				</div>
