--- a/index.html
+++ b/index.html
@@ -83,16 +83,13 @@
 					<header>
 						<h2>MY WORK</h2>
 					</header>
-					<p align="justify"><b>Fascinated by colours and geometric figures, as well as by nature; my work mixes the abstract with the figurative.<br>
-
-					After the particular look of my everyday scenes, it is then that the
+					<p align="justify">Fascinated by colours and geometric figures, as well as by nature; my work mixes the abstract with the figurative.After the particular look of my everyday scenes, it is then that the
 					creativity process starts; between pencils, paints, tapes and
 					photographies.<br>
-
 					I like the surprise once I start to remove the tapes. The result
 					appears from the game of figures and empty spaces, between the opacity
 					and transparency, between the luminosity of the colours and the
-					darkness.</b></p>
+					darkness.</p>
 				</div>
 				<a href="#work" class="button style2 down anchored">Next</a>
 			</section>
