Updating "My work" to be center

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 			<section id="one" class="main style2 right dark fullscreen">
 				<div class="content box style2">
 					<header>
-						<h2>MY WORK</h2>
+						<h2><center>MY WORK</center></h2>
 					</header>
 					<p align="justify">Fascinated by colours and geometric figures, as well as by nature; my work mixes the abstract with the figurative.After the particular look of my everyday scenes, it is then that the
 					creativity process starts; between pencils, paints, tapes and
