--- a/index.html
+++ b/index.html
@@ -133,7 +133,8 @@
 						<br>
 						<centre><a href="https://www.facebook.com/angela.stelin.artist/?fref=ts" target="_blank"><img src="images/facebook.png"></a><a href="https://www.instagram.com/angela.stelin.artist/" target="_blank"><img src="images/instagram.png"></a></centre>
 						<br>
-						<p align="center">EMAIL: angelastelin@gmail.com | PHONE UK +44 (0)7532265596 |SWEDEN +46 (0)702531812</p>
+						<p align="center"><b>EMAIL</b> angelastelin@gmail.com<br>
+							<b>PHONE</b> UK +44 (0)7532265596 | SWEDEN +46 (0)702531812</p>
 					</header>
 					<div class="box container 75%">
 
