Ptting a sentence in gallery as centre

--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
 					<header>
 						<h2>GALLERY</h2>
 						<p align="justify">In nature I find elements so contradictory and marvellous that become paramount material for my work; such as the dispersed variety and the
-						geometry, their strength and fragility, peace and violence, light and shadow.<br>
-						I see particles coming together and adding up, shaping scenes of a world that is ever changing.</p>
+						geometry, their strength and fragility, peace and violence, light and shadow.</p><br>
+						<p align ="center">I see particles coming together and adding up, shaping scenes of a world that is ever changing.</p>
 					</header>
 
 					<!-- Lightbox Gallery  -->
