--- a/index.html
+++ b/index.html
@@ -59,20 +59,7 @@
 					<header>
 						<h2>MEET THE ARTIST</h2>
 					</header>
-						<p align="justify">I am Brazilian, born in Bauru in the state of São Paulo. I spent all
-							of my childhood and youth in the alpha global city of São Paulo and
-							holidaying in Mato Grosso do Sul.I grew up in a family linked to music, literature and visual arts, andsoon I started drawing. When the moment came to decide on my career,
-							considering I enjoyed mathematics and geometric drawings, I opted to
-							study Industrial Design at Fundação Armando Álvares Penteado.Came marriage and the children, I put my career on the side but I was
-							never pulled away from my passion for the Arts; fulfilling myself
-							appreciating artwork and artistic manifestations.<br>
-							I left Brazil in 1994, following my husband to live in Morocco, Turkey
-							and then Sweden. It was in Istanbul that I had the chance to learn to
-							do turkish miniatures, marbling, painting in gouache and watercolour.<br>
-							Today, I spend my time between the tranquil life in Åmål, Sweden and
-							the buzz of London, England.It was with the births of my grandchildren that the desire to dedicate
-							myself to the Arts returned with a tremendous strength, with an
-							immense desire to express life, creativity, colours and nature!</p>
+						<p align="justify">I am Brazilian, born in Bauru in the state of São Paulo. I spent all of my childhood and youth in the city of São Paulo and holidaying in Mato Grosso do Sul. I grew up in a family linked to music, literature and visual arts, and at a young age I started drawing. When the moment came to decide on my career, considering I enjoyed mathematics and geometric drawings, I opted to study Industrial Design at Fundação Armando Álvares Penteado. After getting married and having children, I put my career on the side but I was never pulled away from my passion for the Arts; fulfilling myself appreciating artwork and artistic manifestations.<br>I left Brazil in 1994, following my husband to live in Morocco, Turkey and then Sweden. It was in Istanbul that I had the chance to learn to do Turkish miniatures, marbling, painting in gouache and watercolour.<br>Today, I spend my time between the tranquil life in Åmål, Sweden and the buzz of London, England. It was with the births of my grandchildren that the desire to dedicate myself to the Arts returned with a tremendous strength, with an immense desire to express life, creativity, colours and nature!</p>
 				</div>
 				<a href="#one" class="button style2 down anchored">Next</a>
 			</section>
