--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 						<h2></h2>
 					</header>
 					<p align="justify">My biggest challenge is to portray in canvas my way of seeing and feeling my surroundings</p>
-					<p align="center"><img src="images/Signature.PNG"></p>
+					<p align="center"><img src="images/Signature.png"></p>
 				</div>
 				<a href="#artist" class="button style2 down anchored">More</a>
 			</section>
