Adding portugese website

--- a/Port.html
+++ b/Port.html
@@ -25,12 +25,12 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul>
-							<li><a href="#intro"><b>WELCOME</b></a></li>
-							<li><a href="#artist"><b>MEET THE ARTIST</b></a></li>
-							<li><a href="#one"><b>MY WORK</b></a></li>
-							<li><a href="#work"><b>GALLERY</b></a></li>
-							<li><a href="#contact"><b>CONTACT</b></a></li>
-							<li><a href="port.html"><b>PORT</b></a></li>
+							<li><a href="#intro"><b>BEM-VINDO</b></a></li>
+							<li><a href="#artist"><b>CONHECA O ARTISTA</b></a></li>
+							<li><a href="#one"><b>MEU TRABALHO</b></a></li>
+							<li><a href="#work"><b>GALERIA</b></a></li>
+							<li><a href="#contact"><b>CONTATO</b></a></li>
+							<li><a href="intro.html"><b>EN</b></a></li>
 						</ul>
 					</nav>
 
