--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 							<li><a href="#one"><b>MY WORK</b></a></li>
 							<li><a href="#work"><b>GALLERY</b></a></li>
 							<li><a href="#contact"><b>CONTACT</b></a></li>
-							<li><a href="port.html"><b>POR</b></a></li>
+							<li><a href="port/port.html"><b>POR</b></a></li>
 						</ul>
 					</nav>
 
