--- a/port/port.html
+++ b/port/port.html
@@ -42,7 +42,7 @@
 					<header>
 						<h2></h2>
 					</header>
-					<p align="justify">My biggest challenge is to portray in canvas my way of seeing and feeling my surroundings</p>
+					<p align="justify">Meu maior desafio é colocar na tela meu jeito de ver e sentir o que me rodeia.</p>
 					<p align="right"><img src="images/Signature.png"></p>
 				</div>
 				<a href="#artist" class="button style2 down anchored">More</a>
@@ -59,9 +59,11 @@
 			<section id="artist2" class="main style3 primary">
 				<div class="content container">
 					<header>
-						<h2>MEET THE ARTIST</h2>
+						<h2>CONHECA O ARTISTA</h2>
 					</header>
-						<p align="justify">I am Brazilian, born in Bauru in the state of São Paulo. I spent all of my childhood and youth in the city of São Paulo and holidaying in Mato Grosso do Sul. I grew up in a family linked to music, literature and visual arts, and at a young age I started drawing. When the moment came to decide on my career, considering I enjoyed mathematics and geometric drawings, I opted to study Industrial Design at Fundação Armando Álvares Penteado. After getting married and having children, I put my career on the side but I was never pulled away from my passion for the Arts; fulfilling myself appreciating artwork and artistic manifestations.<br>I left Brazil in 1994, following my husband to live in Morocco, Turkey and then Sweden. It was in Istanbul that I had the chance to learn to do Turkish miniatures, marbling, painting in gouache and watercolour.<br>Today, I spend my time between the tranquil life in Åmål, Sweden and the buzz of London, England. It was with the births of my grandchildren that the desire to dedicate myself to the Arts returned with a tremendous strength, with an immense desire to express life, creativity, colours and nature!</p>
+						<p align="justify">Nasci em Bauru, SP, mas passei toda minha infância e juventude entre a capital, São Paulo, e férias em Mato Grosso do Sul.
+	                    Cresci numa família ligada a música, literatura, jornalismo e artes visuais e muito cedo comecei a desenhar. Na hora de decidir minha profissão, como gostava de matemática e desenho geométrico, optei por cursar Desenho Industrial na Fundação Armando Álvares Penteado, São Paulo-SP.<br>Com o casamento e a vinda dos filhos, deixei a carreira de lado mas nunca me afastei da paixão pela arte, me contentando em apreciar obras e manifestações artísticas.
+                        Saí do Brasil em 1994, acompanhando meu marido e filhos, para morar em Marrocos, Turquia, e depois Suécia. Em Istambul tive a oportunidade de fazer cursos de pintura de miniatura turca, marmorização, guache e aquarela. <br>Dividindo meu tempo entre a tranquila Amal, Suécia, e a movimentada Londres, Inglaterra, foi com o nascimento dos netos que a vontade de se dedicar a arte retornou com força, num desejo enorme de expressar a vida, a criatividade, as cores e a natureza!</p>
 				</div>
 				<a href="#one" class="button style2 down anchored">Next</a>
 			</section>
@@ -70,13 +72,10 @@
 			<section id="one" class="main style2 right dark fullscreen">
 				<div class="content box style2">
 					<header>
-						<h2><center>MY WORK</center></h2>
+						<h2><center>MEU TRABALHO</center></h2>
 					</header>
-					<p align="justify"> Fascinated by colours and geometric figures, as well as by nature; my work mixes the abstract with the figurative. Inspired by everyday scenes, it is then that the creativity process starts; between pencils, paints, tapes and photographies<br>
-					I like the surprise once I start to remove the tapes. The result
-					appears from the game of figures and empty spaces, between the opacity
-					and transparency, between the luminosity of the colours and the
-					darkness.</p>
+					<p align="justify"> Fascinada pelas cores e figuras geométricas, mas também pela natureza, meu trabalho mescla o abstrato com o figurativo. Depois do olhar particular de cenas do cotidiano, começa, então, o processo de criação, entre pincéis, tintas, fitas adesivas e fotografias.<br>
+					Gosto da surpresa quando, retirando os adesivos, surge o resultado do jogo entre as figuras e os vazios, entre a opacidade e a transparência, entre o brilho das cores e a escuridão.</p>
 				</div>
 				<a href="#work" class="button style2 down anchored">Next</a>
 			</section>
@@ -85,10 +84,9 @@
 			<section id="work" class="main style3 primary">
 				<div class="content container">
 					<header>
-						<h2>GALLERY</h2>
-						<p align="justify">In nature I find elements so contradictory and marvellous that become paramount material for my work; such as the dispersed variety and the
-						geometry, their strength and fragility, peace and violence, light and shadow.</p>
-						<p align ="center">I see particles coming together and adding up, shaping scenes of a world that is ever changing.</p>
+						<h2>GALERIA</h2>
+						<p align="justify">Encontro na natureza elementos tão contraditórios e maravilhosos, que passam a ser matéria fundamental em meu trabalho, como a variedade dispersa e a geometria, sua força e fragilidade, paz e violência, luz e sombra!</p>
+						<p align ="center">Vejo partículas se unindo e somando, formando cenas de um mundo que se modifica a cada instante.</p>
 					</header>
 
 					<!-- Lightbox Gallery  -->
@@ -116,7 +114,7 @@
 			<section id="contact" class="main style3 secondary">
 				<div class="content container">
 					<header>
-						<h2>KEEP IN TOUCH</h2>
+						<h2>CONTATO</h2>
 						<br>
 						<centre><a href="https://www.facebook.com/angela.stelin.artist/?fref=ts" target="_blank"><img src="images/facebook.png"></a><a href="https://www.instagram.com/angela.stelin.artist/" target="_blank"><img src="images/instagram.png"></a></centre>
 						<br>
