--- a/port/port.html
+++ b/port/port.html
@@ -30,7 +30,7 @@
 							<li><a href="#one"><b>MEU TRABALHO</b></a></li>
 							<li><a href="#work"><b>GALERIA</b></a></li>
 							<li><a href="#contact"><b>CONTATO</b></a></li>
-							<li><a href="../index.html"><b>EN</b></a></li>
+							<li><a href="../index.html"><img src="../images/english.png"></a></li>
 						</ul>
 					</nav>
 
