Changes in portuguese website

--- a/port/port.html
+++ b/port/port.html
@@ -26,7 +26,7 @@
 					<nav id="nav">
 						<ul>
 							<li><a href="#intro"><b>BEM-VINDO</b></a></li>
-							<li><a href="#artist"><b>CONHECA O ARTISTA</b></a></li>
+							<li><a href="#artist"><b>CONHEÇA A ARTISTA</b></a></li>
 							<li><a href="#one"><b>MEU TRABALHO</b></a></li>
 							<li><a href="#work"><b>GALERIA</b></a></li>
 							<li><a href="#contact"><b>CONTATO</b></a></li>
@@ -59,11 +59,11 @@
 			<section id="artist2" class="main style3 primary">
 				<div class="content container">
 					<header>
-						<h2>CONHECA O ARTISTA</h2>
+						<h2>CONHEÇA A ARTISTA</h2>
 					</header>
-						<p align="justify">Nasci em Bauru, SP, mas passei toda minha infância e juventude entre a capital, São Paulo, e férias em Mato Grosso do Sul.
-	                    Cresci numa família ligada a música, literatura, jornalismo e artes visuais e muito cedo comecei a desenhar. Na hora de decidir minha profissão, como gostava de matemática e desenho geométrico, optei por cursar Desenho Industrial na Fundação Armando Álvares Penteado, São Paulo-SP.<br>Com o casamento e a vinda dos filhos, deixei a carreira de lado mas nunca me afastei da paixão pela arte, me contentando em apreciar obras e manifestações artísticas.
-                        Saí do Brasil em 1994, acompanhando meu marido e filhos, para morar em Marrocos, Turquia, e depois Suécia. Em Istambul tive a oportunidade de fazer cursos de pintura de miniatura turca, marmorização, guache e aquarela. <br>Dividindo meu tempo entre a tranquila Amal, Suécia, e a movimentada Londres, Inglaterra, foi com o nascimento dos netos que a vontade de se dedicar a arte retornou com força, num desejo enorme de expressar a vida, a criatividade, as cores e a natureza!</p>
+						<p align="justify">Nasci em Bauru-SP, mas passei toda minha infância e juventude entre a capital, São Paulo, e férias em Mato Grosso do Sul.
+	                    Cresci numa família ligada a música, literatura, jornalismo e artes visuais e muito cedo comecei a desenhar. Na hora de decidir minha profissão, como gostava de matemática e desenho geométrico, optei por cursar Desenho Industrial na Fundação Armando Álvares Penteado, São Paulo-SP.<br>Com o casamento e a vinda dos filhos, deixei a carreira de lado mas nunca abandonei a paixão pela arte, me contentando em apreciar obras e manifestações artísticas.
+                        Saí do Brasil em 1994, acompanhando meu marido e filhos, para morar em Marrocos, Turquia, e depois Suécia. Em Istambul tive a oportunidade de fazer cursos de pintura de miniatura turca, marmorização, guache e aquarela. <br>Dividindo meu tempo entre a tranquila Åmål, Suécia, e a movimentada Londres, Inglaterra, foi com o nascimento dos netos que a vontade de se dedicar a arte retornou com força, num desejo enorme de expressar a vida, a criatividade, as cores e a natureza!</p>
 				</div>
 				<a href="#one" class="button style2 down anchored">Next</a>
 			</section>
@@ -74,7 +74,7 @@
 					<header>
 						<h2><center>MEU TRABALHO</center></h2>
 					</header>
-					<p align="justify"> Fascinada pelas cores e figuras geométricas, mas também pela natureza, meu trabalho mescla o abstrato com o figurativo. Depois do olhar particular de cenas do cotidiano, começa, então, o processo de criação, entre pincéis, tintas, fitas adesivas e fotografias.<br>
+					<p align="justify"> Fascinada pelas cores, figuras geométricas e também pela natureza, meu trabalho mescla o abstrato com o figurativo. Depois do olhar particular de cenas do cotidiano, começa o processo de criação entre pincéis, tintas, fitas adesivas e fotografias.<br>
 					Gosto da surpresa quando, retirando os adesivos, surge o resultado do jogo entre as figuras e os vazios, entre a opacidade e a transparência, entre o brilho das cores e a escuridão.</p>
 				</div>
 				<a href="#work" class="button style2 down anchored">Next</a>
@@ -85,7 +85,7 @@
 				<div class="content container">
 					<header>
 						<h2>GALERIA</h2>
-						<p align="justify">Encontro na natureza elementos tão contraditórios e maravilhosos, que passam a ser matéria fundamental em meu trabalho, como a variedade dispersa e a geometria, sua força e fragilidade, paz e violência, luz e sombra!</p>
+						<p align="justify">Encontro na natureza elementos tão contraditórios e maravilhosos, que passam a ser matéria fundamental em meu trabalho, como a variedade dispersa e geométrica, sua força e fragilidade, paz e violência, luz e sombra!</p>
 						<p align ="center">Vejo partículas se unindo e somando, formando cenas de um mundo que se modifica a cada instante.</p>
 					</header>
 
@@ -119,7 +119,7 @@
 						<centre><a href="https://www.facebook.com/angela.stelin.artist/?fref=ts" target="_blank"><img src="images/facebook.png"></a><a href="https://www.instagram.com/angela.stelin.artist/" target="_blank"><img src="images/instagram.png"></a></centre>
 						<br>
 						<p align="center"><b>EMAIL</b> angelastelin@gmail.com<br>
-							<b>PHONE</b> UK +44 (0)7532265596 | SWEDEN +46 (0)702531812</p>
+							<b>PHONE</b> UK +44 (0)7532265596 | SUÉCIA +46 (0)702531812</p>
 					</header>
 					<div class="box container 75%">
 
