Added text changes to both english and portuguese sites

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 					<header>
 						<h2></h2>
 					</header>
-					<p align="justify">My biggest challenge is to portray in canvas my way of seeing and feeling my surroundings.</p>
+					<p align="justify">My pleasure is to depict on canvas my way of seeing and feeling my surroundings.</p>
 					<p align="right"><img src="images/Signature.png"></p>
 				</div>
 				<a href="#artist" class="button style2 down anchored">More</a>
@@ -61,7 +61,7 @@
 					<header>
 						<h2>MEET THE ARTIST</h2>
 					</header>
-						<p align="justify">I am Brazilian, born in Bauru in the state of São Paulo. I spent all of my childhood and youth in the city of São Paulo and holidaying in Mato Grosso do Sul. I grew up in a family linked to music, literature and visual arts, and at a young age I started drawing. When the moment came to decide on my career, considering I enjoyed mathematics and geometric drawings, I opted to study Industrial Design at Fundação Armando Álvares Penteado. After getting married and having children, I put my career on the side but I was never pulled away from my passion for the Arts; fulfilling myself appreciating artwork and artistic manifestations.<br>I left Brazil in 1994, following my husband to live in Morocco, Turkey and then Sweden. It was in Istanbul that I had the chance to learn to do Turkish miniatures, marbling, painting in gouache and watercolour.<br>Today, I spend my time between the tranquil life in Åmål, Sweden and the buzz of London, England. It was with the births of my grandchildren that the desire to dedicate myself to the Arts returned with a tremendous strength, with an immense desire to express life, creativity, colours and nature!</p>
+						<p align="justify">Angela Stelin was born and raised in Brazil, spending her childhood between the bustling São Paulo and the tranquil farmlands of the Centre-West region, Mato Grosso do Sul. She grew up in a family immersed in music, literature, journalism and visual arts, and naturally developed an interest in drawing at a very young age. Driven by her enthusiasm for mathematics and geometric drawings, Angela pursued studies in Industrial Design from Fundação Armando Álvares Penteado (FAAP) in São Paulo, graduating in 1982.<br>Angela left Brazil with her husband and kids in 1994, living in Morocco, Turkey and then Sweden along the way. In these challenging and adventurous years, she fulfilled her passion for the arts by appreciating other artists' manifestations and exhibitions wherever she set foot upon. In Istanbul, Angela explored other techniques, such as marbling (Ebru), miniaturing, gouache and watercolours. <br>Today, Angela spends her time between the upcoming creative hive of Gothenburg, Sweden, and the eternal vibrancy of London, England, developing her own artistic style- expressing life, colours and nature.</p>
 				</div>
 				<a href="#one" class="button style2 down anchored">Next</a>
 			</section>
@@ -72,11 +72,7 @@
 					<header>
 						<h2><center>MY WORK</center></h2>
 					</header>
-					<p align="justify"> Fascinated by colours and geometric figures, as well as by nature; my work mixes the abstract with the figurative. Inspired by everyday scenes, it is then that the creativity process starts; between pencils, paints, tapes and photographies<br>
-					I like the surprise once I start to remove the tapes. The result
-					appears from the game of figures and empty spaces, between the opacity
-					and transparency, between the luminosity of the colours and the
-					darkness.</p>
+					<p align="justify"> Fascinated by geometric figures and nature, Angela's style mixes the abstract with figurative concepts. Everyday scenes inspire the creative process, put on canvas with pencils, acrylic paints, tapes and photographs. She enjoys the surprise effect once the tapes from the canvas are removed, showing a concoction of figures and empty spaces, transcending between opacity and transparency, luminosity and darkness. Angela is inspired by the contradicting beauty of nature - symmetry and chaos, strength and fragility, peace and violence, light and shadow - thus becoming key components of her work.</p>
 				</div>
 				<a href="#work" class="button style2 down anchored">Next</a>
 			</section>
@@ -86,9 +82,7 @@
 				<div class="content container">
 					<header>
 						<h2>GALLERY</h2>
-						<p align="justify">In nature I find elements so contradictory and marvellous that become paramount material for my work; such as the dispersed variety and the
-						geometry, their strength and fragility, peace and violence, light and shadow.</p>
-						<p align ="center">I see particles coming together and adding up, shaping scenes of a world that is ever changing.</p>
+						<p align ="center">"I see particles coming together in dynamic superpositions, shaping scenes of a world that is constantly changing." Angela, 2016</p>
 					</header>
 
 					<!-- Lightbox Gallery  -->
