--- a/port/port.html
+++ b/port/port.html
@@ -42,7 +42,7 @@
 					<header>
 						<h2></h2>
 					</header>
-					<p align="justify">Meu maior desafio é colocar na tela meu jeito de ver e sentir o que me rodeia.</p>
+					<p align="justify">Meu prazer é colocar na tela meu jeito de ver e sentir o que me rodeia.</p>
 					<p align="right"><img src="images/Signature.png"></p>
 				</div>
 				<a href="#artist" class="button style2 down anchored">More</a>
@@ -61,9 +61,7 @@
 					<header>
 						<h2>CONHEÇA A ARTISTA</h2>
 					</header>
-						<p align="justify">Nasci em Bauru-SP, mas passei toda minha infância e juventude entre a capital, São Paulo, e férias em Mato Grosso do Sul.
-	                    Cresci numa família ligada a música, literatura, jornalismo e artes visuais e muito cedo comecei a desenhar. Na hora de decidir minha profissão, como gostava de matemática e desenho geométrico, optei por cursar Desenho Industrial na Fundação Armando Álvares Penteado, São Paulo-SP.<br>Com o casamento e a vinda dos filhos, deixei a carreira de lado mas nunca abandonei a paixão pela arte, me contentando em apreciar obras e manifestações artísticas.
-                        Saí do Brasil em 1994, acompanhando meu marido e filhos, para morar em Marrocos, Turquia, e depois Suécia. Em Istambul tive a oportunidade de fazer cursos de pintura de miniatura turca, marmorização, guache e aquarela. <br>Dividindo meu tempo entre a tranquila Åmål, Suécia, e a movimentada Londres, Inglaterra, foi com o nascimento dos netos que a vontade de se dedicar a arte retornou com força, num desejo enorme de expressar a vida, a criatividade, as cores e a natureza!</p>
+						<p align="justify">Angela Stelin nasceu e cresceu no Brasil, passando sua infância entre a agitada São Paulo e a região tranquila de Mato Grosso do Sul. Vivendo numa família envolvida com a musica, literatura, jornalismo e artes, muito cedo começou a desenhar. Entusiasmada com matemática e desenho geométrico, Angela decidiu cursar Desenho Industrial na Fundação Armando Álvares Penteado ( FAAP) em São Paulo, formando-se em 1982.<br>Angela, marido e filhos deixaram o Brasil em 1994, para morar em Marrocos, Turquia e depois Suécia. Nesses anos de aventura e desafios, manteve sua paixão pela arte apreciando exposições e manifestações de outros artistas por onde passava. Em Istambul, aprendeu novas técnicas como marmorização (Ebru), miniatura, guache e aquarela. <br>Hoje, Angela divide seu tempo entre  a criativa Gotemburgo, Suécia, e a vibrante e eterna Londres, Inglaterra, desenvolvendo seu próprio estilo artístico - expressando a natureza, cores e a vida.</p>
 				</div>
 				<a href="#one" class="button style2 down anchored">Next</a>
 			</section>
@@ -72,10 +70,9 @@
 			<section id="one" class="main style2 right dark fullscreen">
 				<div class="content box style2">
 					<header>
-						<h2><center>MEU TRABALHO</center></h2>
+						<h2><center>TÉCNICA E ESTILO</center></h2>
 					</header>
-					<p align="justify"> Fascinada pelas cores, figuras geométricas e também pela natureza, meu trabalho mescla o abstrato com o figurativo. Depois do olhar particular de cenas do cotidiano, começa o processo de criação entre pincéis, tintas, fitas adesivas e fotografias.<br>
-					Gosto da surpresa quando, retirando os adesivos, surge o resultado do jogo entre as figuras e os vazios, entre a opacidade e a transparência, entre o brilho das cores e a escuridão.</p>
+					<p align="justify"> Fascinada por figuras geométricas e natureza, Angela trabalha mesclando conceitos abstratos e figurativos. Cenas do cotidiano inspiram seu processo criativo, realizado na tela através de  pincéis, tinta acrílica, adesivos e fotografias. Encanta-se com a surpresa do resultado ao retirar os adesivos da tela, num jogo entre figuras e vazios, entre a opacidade e a transparência, entre o brilho das cores e a escuridão. E é na natureza, com seus elementos tão contraditórios e maravilhosos, como simetria e caos, força e fragilidade, paz e violência, luz e sombra, que a artista encontra material importante para seu trabalho.</p>
 				</div>
 				<a href="#work" class="button style2 down anchored">Next</a>
 			</section>
@@ -85,8 +82,7 @@
 				<div class="content container">
 					<header>
 						<h2>GALERIA</h2>
-						<p align="justify">Encontro na natureza elementos tão contraditórios e maravilhosos, que passam a ser matéria fundamental em meu trabalho, como a variedade dispersa e geométrica, sua força e fragilidade, paz e violência, luz e sombra!</p>
-						<p align ="center">Vejo partículas se unindo e somando, formando cenas de um mundo que se modifica a cada instante.</p>
+						<p align ="center">"Vejo partículas se unindo e somando, formando cenas de um mundo que se modifica a cada instante." Angela, 2016</p>
 					</header>
 
 					<!-- Lightbox Gallery  -->
