--- a/port/port.html
+++ b/port/port.html
@@ -27,7 +27,7 @@
 						<ul>
 							<li><a href="#intro"><b>BEM-VINDO</b></a></li>
 							<li><a href="#artist"><b>CONHEÇA A ARTISTA</b></a></li>
-							<li><a href="#one"><b>MEU TRABALHO</b></a></li>
+							<li><a href="#one"><b>TÉCNICA E ESTILO</b></a></li>
 							<li><a href="#work"><b>GALERIA</b></a></li>
 							<li><a href="#contact"><b>CONTATO</b></a></li>
 							<li><a href="../index.html"><img src="images/english.png"></a></li>
